# ai-commerce-orchestrator

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md
backend/: .env.example  chat_ws_mock.py  pyproject.toml
backend/app/: config.py  main.py  middleware.py
backend/app/clients/: embeddings.py  llm.py  woocommerce.py
backend/app/core/: auth.py  cache.py  errors.py  metrics.py  retry.py
backend/app/db/: base.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20260408185900_chat_tables.py
backend/app/integrations/whatsapp/: client.py  models.py  templates.py
backend/app/models/: conversation.py
backend/app/routers/: chat.py  health.py  legal.py  metrics.py  orchestrator.py  orders.py  products.py  rag.py  wc_webhook.py  whatsapp.py
backend/app/schemas/: chat.py  errors.py  health.py  orchestrator.py  rag.py  woocommerce.py
backend/app/services/: chat.py  orders.py  products.py
backend/app/services/orchestrator/: checkpointer.py  graph.py  handoff.py  router.py  state.py
backend/app/services/rag/: indexer.py  prompts.py  recommendation.py  vector_store.py
backend/app/workers/: whatsapp_consumer.py
backend/docs/: observability.md
backend/docs/orchestrator/: architecture.md  flow-diagram.mmd
backend/scripts/: benchmark_rag.py  ingest_products.py
backend/tests/: conftest.py  test_app.py  test_cache.py  test_chat_endpoint.py  test_chat_persistence.py  test_core_errors.py  test_health.py  test_llm_client.py  test_logging.py  test_orchestrator_router.py  test_orders.py  test_products.py  test_retry.py  test_root.py  test_whatsapp_client.py  test_whatsapp_consumer.py  test_whatsapp_models.py  test_whatsapp_router.py  test_woocommerce_client.py
backend/tests/e2e/: chat-widget.spec.js
backend/tests/fixtures/: chat_payloads.json  wc_responses.json
backend/tests/orchestrator/: test_agents.py  test_checkpointer.py  test_graph_integration.py  test_handoff.py  test_router.py
backend/tests/orchestrator/fixtures/: conversations.json
backend/tests/rag/: test_embeddings.py  test_rag_router.py  test_recommendation_service.py  test_vector_store.py  test_wc_webhook.py
cli/: Makefile  go.mod  go.sum  (+1 more)
(+44 files in other folders)
