[project]
name = "ai-commerce-orchestrator"
version = "0.1.0"
description = "Backend base para agentes IA de comercio electrónico"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "asyncpg>=0.30",
    "redis>=5.2",
    "httpx>=0.28",
    "tenacity>=8.2",
    "orjson>=3.9",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "langgraph>=1.1",
    "langgraph-checkpoint-redis>=0.4",
    "langchain-core>=1.3",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "anyio[trio]>=4.7",
    "respx>=0.21",
    "fakeredis>=2.26",
    "aiosqlite>=0.20",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "ASYNC"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"app/db/migrations/**" = ["I001"]
"tests/test_chat_persistence.py" = ["I001"]

[tool.ruff.format]
quote-style = "double"
